@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-09-01T01:08:39Z",
-  "count_outdated" : 109,
-  "uniques_outdated" : 91,
-  "count" : 110,
-  "uniques" : 92,
+  "timestamp" : "2025-09-13T00:53:01Z",
+  "count_outdated" : 110,
+  "uniques_outdated" : 92,
+  "count" : 111,
+  "uniques" : 93,
   "clones" : [
     {
-      "timestamp": "2025-08-26T00:00:00Z",
+      "timestamp": "2025-09-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
